--- a/index.html
+++ b/index.html
@@ -4,15 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/style.css" />
-    <link rel="stylesheet" href="/css/reset.css" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="reset.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      rel="shortcut icon"
-      href="/img/torta-de-maca.png"
-      type="image/x-icon"
-    />
+    <link rel="shortcut icon" href="torta-de-maca.png" type="image/x-icon" />
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,500;1,600;1,700;1,800&display=swap"
       rel="stylesheet"
@@ -25,7 +21,7 @@
         <div class="img-box-logo">
           <img
             class="logo-doceria"
-            src="/img/stand.png"
+            src="stand.png"
             alt="logo doceria"
             width="120px"
           />
@@ -46,11 +42,7 @@
         <section id="content">
           <div class="content">
             <h1 class="titulo-bemvindo">-SEJA BEM VINDO A NOSSA DOCERIA-</h1>
-            <img
-              class="main-banner"
-              src="/img/banner2.jpg"
-              alt="banner de doces"
-            />
+            <img class="main-banner" src="banner2.jpg" alt="banner de doces" />
             <div class="content-texto">
               <p class="text text-secundary-1">
                 Encontrar alguém que não goste de um docinho, seja ele como for,
@@ -80,7 +72,7 @@
         </section>
         <section id="sessao-sobre">
           <h1 class="titulo-sobre">SOBRE NÓS</h1>
-          <img class="img-2" src="/img/banner4.jpg" alt="" />
+          <img class="img-2" src="banner4.jpg" alt="" />
           <div class="text-sobre">
             <p>
               Então, quando falamos de nós pra vocês temos que ser bem sinceros
@@ -95,12 +87,12 @@
         <section id="sessao-doce1">
           <h1 class="titulo-doce-1">SESSÃO DOCE 1</h1>
           <div class="content-img-sessao-doce-1">
-            <img src="/img/galeria1.jpg" alt="" width="245px" />
-            <img src="/img/galeria2.jpg" alt="" width="245px" />
-            <img src="/img/galeria3.jpg" alt="" width="245px" />
-            <img src="/img/galeria4.jpg" alt="" width="245px" />
-            <img src="/img/galeria5.jpg" alt="" width="245px" />
-            <img src="/img/galeria6.jpg" alt="" width="245px" />
+            <img src="galeria1.jpg" alt="" width="245px" />
+            <img src="galeria2.jpg" alt="" width="245px" />
+            <img src="galeria3.jpg" alt="" width="245px" />
+            <img src="galeria4.jpg" alt="" width="245px" />
+            <img src="galeria5.jpg" alt="" width="245px" />
+            <img src="galeria6.jpg" alt="" width="245px" />
           </div>
           <div class="texto-sessao-doce-1">
             <p>
@@ -117,18 +109,18 @@
           <h1 class="titulo-sessao-doce-2">SESSÃO DOCE 2</h1>
           <div class="content-img-sessao-doce-2">
             <p class="titulo-img">marrom bombom</p>
-            <img src="/img/galeria7.jpg" alt="" width="80%" />
+            <img src="galeria7.jpg" alt="" width="80%" />
             <p class="titulo-img">bailarina delicada</p>
-            <img src="/img/galeria8.jpg" alt="" width="80%" />
+            <img src="galeria8.jpg" alt="" width="80%" />
             <p class="titulo-img">latino americano com cereja</p>
-            <img src="/img/galeria11.jpg" alt="" width="80%" />
+            <img src="galeria11.jpg" alt="" width="80%" />
           </div>
         </section>
         <section class="sessao-doce-3" id="sessao-doce3">
           <h1 class="titulo-sessao-doce-3">SESSÃO DOCE 3</h1>
           <div class="content-img-sessao-doce-3">
-            <img src="/img/galeria12.jpg" alt="" width="80%" />
-            <img src="/img/galeria9.jpg" alt="" width="80%" />
+            <img src="galeria12.jpg" alt="" width="80%" />
+            <img src="galeria9.jpg" alt="" width="80%" />
           </div>
           <div class="text-sessao-doce-3">
             <p>
@@ -139,11 +131,11 @@
           </div>
           <footer>
             <div class="footer" id="sessao-contato">
-              <img src="/img/instagram_108043.png" alt="" width="60px" />
+              <img src="instagram_108043.png" alt="" width="60px" />
               <p class="copy">@ copyrigth 2023</p>
               <img
                 class="zap"
-                src="/img/whatsapp.png"
+                src="whatsapp.png"
                 alt=""
                 width="50px"
                 height="50px"
