--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="img-box-logo">
           <img
             class="logo-doceria"
-            src="stand.png"
+            src="/stand.png"
             alt="logo doceria"
             width="120px"
           />
