--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="img-box-logo">
           <img
             class="logo-doceria"
-            src="/stand.png"
+            src="./stand.png"
             alt="logo doceria"
             width="120px"
           />
@@ -42,7 +42,11 @@
         <section id="content">
           <div class="content">
             <h1 class="titulo-bemvindo">-SEJA BEM VINDO A NOSSA DOCERIA-</h1>
-            <img class="main-banner" src="banner2.jpg" alt="banner de doces" />
+            <img
+              class="main-banner"
+              src="./banner2.jpg"
+              alt="banner de doces"
+            />
             <div class="content-texto">
               <p class="text text-secundary-1">
                 Encontrar alguém que não goste de um docinho, seja ele como for,
@@ -72,7 +76,7 @@
         </section>
         <section id="sessao-sobre">
           <h1 class="titulo-sobre">SOBRE NÓS</h1>
-          <img class="img-2" src="/banner4.jpg" alt="" />
+          <img class="img-2" src="./banner4.jpg" alt="" />
           <div class="text-sobre">
             <p>
               Então, quando falamos de nós pra vocês temos que ser bem sinceros
@@ -87,12 +91,12 @@
         <section id="sessao-doce1">
           <h1 class="titulo-doce-1">SESSÃO DOCE 1</h1>
           <div class="content-img-sessao-doce-1">
-            <img src="/galeria1.jpg" alt="" width="245px" />
-            <img src="/galeria2.jpg" alt="" width="245px" />
-            <img src="/galeria3.jpg" alt="" width="245px" />
-            <img src="/galeria4.jpg" alt="" width="245px" />
-            <img src="/galeria5.jpg" alt="" width="245px" />
-            <img src="/galeria6.jpg" alt="" width="245px" />
+            <img src="./galeria1.jpg" alt="" width="245px" />
+            <img src="./galeria2.jpg" alt="" width="245px" />
+            <img src="./galeria3.jpg" alt="" width="245px" />
+            <img src="./galeria4.jpg" alt="" width="245px" />
+            <img src="./galeria5.jpg" alt="" width="245px" />
+            <img src="./galeria6.jpg" alt="" width="245px" />
           </div>
           <div class="texto-sessao-doce-1">
             <p>
@@ -109,18 +113,18 @@
           <h1 class="titulo-sessao-doce-2">SESSÃO DOCE 2</h1>
           <div class="content-img-sessao-doce-2">
             <p class="titulo-img">marrom bombom</p>
-            <img src="/galeria7.jpg" alt="" width="80%" />
+            <img src="./galeria7.jpg" alt="" width="80%" />
             <p class="titulo-img">bailarina delicada</p>
-            <img src="/galeria8.jpg" alt="" width="80%" />
+            <img src="./galeria8.jpg" alt="" width="80%" />
             <p class="titulo-img">latino americano com cereja</p>
-            <img src="/galeria11.jpg" alt="" width="80%" />
+            <img src="./galeria11.jpg" alt="" width="80%" />
           </div>
         </section>
         <section class="sessao-doce-3" id="sessao-doce3">
           <h1 class="titulo-sessao-doce-3">SESSÃO DOCE 3</h1>
           <div class="content-img-sessao-doce-3">
-            <img src="/galeria12.jpg" alt="" width="80%" />
-            <img src="/galeria9.jpg" alt="" width="80%" />
+            <img src="./galeria12.jpg" alt="" width="80%" />
+            <img src="./galeria9.jpg" alt="" width="80%" />
           </div>
           <div class="text-sessao-doce-3">
             <p>
@@ -131,11 +135,11 @@
           </div>
           <footer>
             <div class="footer" id="sessao-contato">
-              <img src="/instagram_108043.png" alt="" width="60px" />
+              <img src="./instagram_108043.png" alt="" width="60px" />
               <p class="copy">@ copyrigth 2023</p>
               <img
                 class="zap"
-                src="/whatsapp.png"
+                src="./whatsapp.png"
                 alt=""
                 width="50px"
                 height="50px"
